--- a/ABP_Library/aspnet-core/src/Acme.BookStore.DbMigrator/appsettings.json
+++ b/ABP_Library/aspnet-core/src/Acme.BookStore.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-5VHTUGC;Database=ABP_Library;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=DESKTOP-6EJDK3U;Database=ABP_Library;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "OpenIddict": {
     "Applications": {
