--- a/ABP_Library/aspnet-core/src/Acme.BookStore.HttpApi.Host/appsettings.json
+++ b/ABP_Library/aspnet-core/src/Acme.BookStore.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-5VHTUGC;Database=ABP_Library;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=DESKTOP-6EJDK3U;Database=ABP_Library;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44386",
